$Id$

1.4.5 TBD

* isolate date/time formatting for graph mouseovers
* include pid when logging to help isolate multi-core/multi-thread issues.
* fixed debian6 packaging problems.
* change authentication behavior when nagios default_user_name is defined.
   behavior is now aligned to that defined in nagios.
* use more precise values for graph zoom bounds.
* specify explicitly the default graph height.
* strip leading and trailing whitespace from tuples (heartbeats, stepsizes,
   resolutions, steps, xffs, plotasLINE1, plotasLINE2, etc).
* added fixedscale as a per host/service/database/source parameter.  for
   backward compatibility it still works when specified as a cgi argument.
   note that it affects the vertical axis and the values in the legend.
* handle # in database and data source names
* ensure the directory containing perfdata log is writeable by nagios user.
* added export.cgi to dump rrd data in csv or xml format.
* automatically determine groups from the Nagios servicegroup definitions.
* fixed heartbeats/stepsizes/resolutions bug.  this time for real.  really.
* retain a copy of any modifications made to nagios.cfg and commands.cfg when
   removing rpm or deb packages.
* fixed install.pl to work with icinga.
* renamed upgrade.pl to flat2hier.pl
* fixed install option typo for --check-prerequisites in install instructions.
* encourage standalone installations rather than overlays unless installing
   from rpm or deb package.
* encourage nagios pre-flight checks before restarting nagios.

1.4.4 2011-01-15

* this release includes many changes to the default map configuration and the
   default colors and labels.  this was designed to make new installations
   easier right out of the box.  the bug fixes and feature additions are
   backward compatible, so configuration files from existing installations
   will still work.  see the upgrade section of the README file for details.
* overhaul of install.pl.  added option to check for prerequisites (poorly